--- a/src/App.scss
+++ b/src/App.scss
@@ -34,7 +34,7 @@ body {
   width: 853px;
   height: 640px;
   z-index: 4;
-  background: #FFFAF0;
+  background: #fffaf0;
   min-height: 300px;
   opacity: 1;
   display: flex;
@@ -89,6 +89,99 @@ body {
 }
 .form-modal input {
   width: 100%;
+}
+
+.card {
+  width: 360px;
+  max-width: 100%;
+  border: 1px solid black;
+  padding: 15px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+}
+.catalog-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+img {
+  max-width: 100%;
+}
+.card img {
+  height: 200px;
+}
+.card-image,
+.card-title,
+.card-price {
+  text-align: center;
+}
+.card-title,
+.card-price {
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 10px;
+}
+.card-description {
+  margin-bottom: 30px;
+}
+.card-price {
+  margin-top: auto;
+  color: red;
+}
+.product-info {
+  display: flex;
+  padding: 50px 0;
+}
+.product-image {
+  width: 50%;
+  text-align: center;
+}
+.product-text {
+  width: 50%;
+}
+.product-image img {
+  max-width: 100%;
+  height: 400px;
+}
+.product-title {
+  font-size: 30px;
+  font-weight: 600;
+  margin: 25px auto;
+}
+.product-description {
+  margin: 25px 0;
+}
+.product-buttons {
+  display: flex;
+  margin: 70px 0;
+}
+.product-buttons > div {
+  width: 50%;
+  text-align: center;
+}
+.product-price {
+  font-size: 30px;
+  font-weight: 600;
+  color: red;
+}
+.product-buy-button {
+  width: 200px;
+  height: 48px;
+  background-color: blue;
+  color: white;
+  border-radius: 20px;
+  cursor: pointer;
+}
+.product-buy-button:hover {
+  background-color: cornflowerblue;
+}
+.back {
+  text-align: center;
+  margin: 20px 0;
+  color: blue;
+  cursor: pointer;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
