--- a/src/components/auth/Authorization.module.scss
+++ b/src/components/auth/Authorization.module.scss
@@ -6,14 +6,14 @@
   margin: 0;
 }
 
-
 .form_modal {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.left_side, .right_side {
+.left_side,
+.right_side {
   width: 427px;
   height: 640px;
 }
@@ -38,15 +38,18 @@
 }
 
 .pokahz {
-  width: 240px;
-  height: 412px;
+  width: 360px;
+  height: 623px;
   display: flex;
   justify-content: center;
   align-items: stretch;
   flex-direction: column;
 
   input {
-    width: 100%;
+    width: 323px;
+    height: 38px;
+    border: 1px solid #865924;
+    border-radius: 3px;
   }
 }
 
@@ -56,13 +59,15 @@
 
   label {
     position: absolute;
-    /* смещение относительно родительского элемента 10px вверх от верхнего края и   10px влево */
     top: -20px;
     left: 0px;
-    background: #fff;
-    padding: 0 5px;
+    background: #fffaf0;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
   }
-
 }
 
 //
