--- a/src/components/auth/Registration.module.scss
+++ b/src/components/auth/Registration.module.scss
@@ -6,14 +6,14 @@
   margin: 0;
 }
 
-
 .form_modal {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.left_side, .right_side {
+.left_side,
+.right_side {
   width: 427px;
   height: 640px;
 }
@@ -62,5 +62,76 @@
     background: #fff;
     padding: 0 5px;
   }
+}
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+.form_modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.left_side,
+.right_side {
+  width: 427px;
+  height: 640px;
+}
+
+.left_side {
+  background: url("../../assets/bg-photo.png");
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    width: 331px;
+    height: 161px;
+  }
+}
+
+.right_side {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pokahz {
+  width: 360px;
+  height: 623px;
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  flex-direction: column;
+
+  input {
+    width: 323px;
+    height: 38px;
+    border: 1px solid #865924;
+    border-radius: 3px;
+  }
+}
+
+.input_box {
+  position: relative;
+  margin: 0 0 20px 0;
+
+  label {
+    position: absolute;
+    top: -20px;
+    left: 0px;
+    background: #fffaf0;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+  }
 }
